--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset='utf-8' />
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
-    <title>PNG in canvas</title>
+    <title>PNG to the max</title>
     <link href="stylesheets/canvas.css?1338395010" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id='main' role='main'>
       <div id='canvas'></div>
       <p>
-        A clone of http://koalastothemax.com/, but in pure JS with no helper graphic libraries, and drawing using the DOME elements.
+        A clone of http://koalastothemax.com/, but in pure JS with no helper graphic libraries, and drawing using the DOM elements.
       </p>
       <script src="http://code.jquery.com/jquery-1.7.2.min.js" type="text/javascript"></script>
       <script src="https://raw.github.com/devongovett/png.js/master/zlib.js" type="text/javascript"></script>
