--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset='utf-8'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
     <title>PNG in canvas</title>
-    <link href="stylesheets/canvas.css?1395253868" media="screen" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/canvas.css?1395254368" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id='main' role='main'>
-      <p>
+      <p class='p'>
         A clone of
         <a href='http://koalastothemax.com/'>http://koalastothemax.com/</a>
         , but in pure JS with no helper graphic libraries, and drawing using the DOM elements.
       </p>
-      <div id='canvas'></div>
+      <div class='canvas-wrap'>
+        <div id='canvas'></div>
+      </div>
       <script src="http://code.jquery.com/jquery-1.7.2.min.js" type="text/javascript"></script>
       <script src="https://rawgithub.com/devongovett/png.js/master/zlib.js" type="text/javascript"></script>
       <script src="https://rawgithub.com/devongovett/png.js/master/png.js" type="text/javascript"></script>
-      <script src="javascripts/canvas.js?1395253868" type="text/javascript"></script>
+      <script src="javascripts/canvas.js?1395254368" type="text/javascript"></script>
     </div>
   </body>
 </html>
