--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
     <title>PNG in canvas</title>
-    <link href="stylesheets/canvas.css?1395254368" media="screen" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/canvas.css?1427645615" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id='main' role='main'>
@@ -14,12 +14,14 @@
         , but in pure JS with no helper graphic libraries, and drawing using the DOM elements.
       </p>
       <div class='canvas-wrap'>
-        <div id='canvas'></div>
+        <div id='canvas'>
+          Loading, please wait...
+        </div>
       </div>
       <script src="http://code.jquery.com/jquery-1.7.2.min.js" type="text/javascript"></script>
-      <script src="https://rawgithub.com/devongovett/png.js/master/zlib.js" type="text/javascript"></script>
-      <script src="https://rawgithub.com/devongovett/png.js/master/png.js" type="text/javascript"></script>
-      <script src="javascripts/canvas.js?1395254398" type="text/javascript"></script>
+      <script src="https://rawgit.com/devongovett/png.js/master/zlib.js" type="text/javascript"></script>
+      <script src="https://rawgit.com/devongovett/png.js/master/png.js" type="text/javascript"></script>
+      <script src="javascripts/canvas.js?1427645615" type="text/javascript"></script>
     </div>
   </body>
 </html>
